--- a/frame-server/server/web/views/contact_accessible.ejs
+++ b/frame-server/server/web/views/contact_accessible.ejs
@@ -58,7 +58,7 @@
   </div>
   <div class="container navContainer google-maps">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.3268138930753!2d-71.07387628422914!3d42.33555514464081!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a6a9d8cc7e1%3A0x7e53048b1acdb3ea!2sBoston+University+School+of+Public+Health!5e0!3m2!1sen!2sus!4v1484758962152"
+      src="https://www.google.com/maps/place/BU+Hariri+Institute+for+Computing/@42.3497216,-71.106583,17z/data=!4m8!1m2!2m1!1sBU+Software+Application+and+Innovation+Lab!3m4!1s0x89e379f0c4e57a97:0xf082dcc3e210c53c!8m2!3d42.3489357!4d-71.1033896"
       width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 
