--- a/frame-server/server/web/views/contact_accessible.ejs
+++ b/frame-server/server/web/views/contact_accessible.ejs
@@ -57,10 +57,7 @@
     </section>
   </div>
   <div class="container navContainer google-maps">
-    <iframe
-      src="https://www.google.com/maps/place/BU+Hariri+Institute+for+Computing/@42.3497216,-71.106583,17z/data=!4m8!1m2!2m1!1sBU+Software+Application+and+Innovation+Lab!3m4!1s0x89e379f0c4e57a97:0xf082dcc3e210c53c!8m2!3d42.3489357!4d-71.1033896"
-      width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2948.662352514737!2d-71.106583!3d42.3497216!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e379f0c4e57a97%3A0xf082dcc3e210c53c!2sBU+Hariri+Institute+for+Computing!5e0!3m2!1sen!2sus!4v1492773318343" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>  </div>
 
 </main>
 
