--- a/frame-server/server/web/views/summary.ejs
+++ b/frame-server/server/web/views/summary.ejs
@@ -31,13 +31,13 @@
     </div>
   </div>
 
-  <div class="row-fluid">
-    <div class="span12 text-center minor-padding-top">
-      <p class="mediumfont minor-padding-bottom"> *Using T score(SE) (Mean=50, SD=10 scale)</p>
-      <a id="view-all-btn" href=<%= viewChartUrl %>>View all</a>
-      <button class="btn btn-primary" id="save-scores" data-toggle="modal" data-target="#downloadModal">Preview Scores</button>
-    </div>
-  </div>
+  <!--<div class="row-fluid">-->
+    <!--<div class="span12 text-center minor-padding-top">-->
+      <!--<p class="mediumfont minor-padding-bottom"> *Using T score(SE) (Mean=50, SD=10 scale)</p>-->
+      <!--<a id="view-all-btn" href=<%= viewChartUrl %>>View all</a>-->
+      <!--<button class="btn btn-primary" id="save-scores" data-toggle="modal" data-target="#downloadModal">Preview Scores</button>-->
+    <!--</div>-->
+  <!--</div>-->
 </div>
 
 <div class="modal modal-fullscreen fade" id="downloadModal" tabindex="-1" role="dialog" aria-labelledby="downloadModalLabel">
