--- a/frame-server/server/web/views/login_accessible.ejs
+++ b/frame-server/server/web/views/login_accessible.ejs
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="form-group center marginTop40">
-        Already have an account? <a href="/register">Please sign up</a>
+        Don't have an account yet? <a href="/register">Please sign up</a>
     </div>
     <div class="form-group center marginTop10">
       Forgot your password? <a href="/forgot">Please click here</a>
