--- a/frame-server/server/web/views/login_accessible.ejs
+++ b/frame-server/server/web/views/login_accessible.ejs
@@ -58,7 +58,7 @@
                 success: function (data) {
                     basil.set('cookie', data);
                     if (JSON.parse(data).changePass) {
-                      alertModal("Your Password Has Expired", "SCI-FI users are required to change their password every 90 days. You will be emailed a code and redirected to the password reset form.", function() {
+                      alertModal("Your Password Has Expired", "BYO-CAT users are required to change their password every 90 days. You will be emailed a code and redirected to the password reset form.", function() {
                         forgotPassword('<%= configUrl %>', usnm);
                       });
                     } else {
