--- a/frame-server/server/web/views/partials/navbar_accessible.ejs
+++ b/frame-server/server/web/views/partials/navbar_accessible.ejs
@@ -21,7 +21,7 @@
   </div>
   <noscript>
     <p id="js-off-message">
-      The page could not be loaded. The Sci-Fi Project
+      The page could not be loaded. The BYO-CAT Project
       does not fully support browsers with &quot;JavaScript&quot; disabled. Please note
       that if you choose to continue without enabling &quot;JavaScript&quot; certain functionalities
       on this website may not be available.
