Some feature edits

--- a/frame-server/server/web/views/partials/navbarWelcome_accessible.ejs
+++ b/frame-server/server/web/views/partials/navbarWelcome_accessible.ejs
@@ -3,7 +3,7 @@
 
   <a class="skip-navigation sr-only sr-only-focusable" href="#page-title">Skip Navigation</a>
   <div class="navbar-header active">
-    <a class="brand pull-left" href="index.html">
+    <a class="brand pull-left" href="/">
       <img src="/public/images/<%=logoname%>" class="mainLogo img-responsive"
            alt="Accessible+ logo - place for company logo" role="logo">
       <span class="sr-only"> selected</span></a>
