--- a/frame-server/server/web/views/login_accessible.ejs
+++ b/frame-server/server/web/views/login_accessible.ejs
@@ -69,6 +69,7 @@
                     var reply = request.responseText;
                     var replyText = (JSON.parse(reply));
                     alert(replyText.message);
+                    l.stop();
                 }
             });
         }
