--- a/frame-server/server/web/views/partials/footer_accessible.ejs
+++ b/frame-server/server/web/views/partials/footer_accessible.ejs
@@ -9,11 +9,11 @@
 </div>
 <script>
    $(document).ready(function() {
-     pushFooter();
+     //pushFooter();
    });
 
    $(window).resize(function() {
-     pushFooter();
+     //pushFooter();
    });
 </script>
 <script src="/public/js/accessibilitymenu.js" data-language="eng" data-oemsource="accessible+" data-sign="classic"></script>
