--- a/frame-server/server/web/views/descriptiontemplate_accessible.ejs
+++ b/frame-server/server/web/views/descriptiontemplate_accessible.ejs
@@ -15,7 +15,7 @@
   </div>
 
   <div class="container bottomMargin50">
-    <section id="benefits" role="benefits">
+    <section id="benefits" class="col-md-6 col-md-offset-3" role="benefits">
         <p><%= text %></p>
     </section>
   </div>
