--- a/frame-server/server/web/views/questiontemplate.ejs
+++ b/frame-server/server/web/views/questiontemplate.ejs
@@ -1,17 +1,22 @@
 <div class="hidden" id="currentQuestionId"><%= questionId %></div>
 <div class="hidden" id="currentSectionId"><%= sectionId %></div>
 <div class="hidden" id="type"><%= type %></div>
-<div id="Page2_" class="container card" >
-
-  <form class="padding-top-5" action="#">
-    <h5 ><%- text %></h5>
-    <br>
-
-    <% for(var i = 0; i < replyOptions.length; i++) { %>
-      <label for=<%= i%> > <input type="radio" name="answer" aria-setsize="2" value= <%= i+1%>
-                              aria-posinset=i id=<%= i%> /> <%= replyOptions[i].text %></label><br>
-      <br>
-    <% } %>
-  </form>
+<div id="Page2_" class="container card bottomMargin50">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <form class="padding-top-5" action="#">
+        <h5 ><%- text %></h5>
+        <br>
+        <radiogroup>
+          <% for(var i = 0; i < replyOptions.length; i++) { %>
+          <input type="radio" name="answer" aria-setsize="2" value= <%= i+1%>
+          aria-posinset=i id=<%= i%> data-score=<%= replyOptions[i].score %> />
+          <label for="<%= i %>" ><%= replyOptions[i].text %></label><br>
+          <br>
+          <% } %>
+        </radiogroup>
+      </form>
+    </div>
+  </div>
 
 </div>
