Added getLocaleResource method to helperMethods.js to extract localized string or array from an object. For backwards compatibility the method recognizes if the object property hasn't been localized, i.e. its a string or an object.
Modified code to call getLocaleResource when reading json files from the
profile folder including demographic questions, survey questions,
section descriptions and home page text.

--- a/frame-server/server/web/views/partials/question_renderer.ejs
+++ b/frame-server/server/web/views/partials/question_renderer.ejs
@@ -1,6 +1,6 @@
 <% for(var i = 0; i < questions.length; i++) { %>
   <div class="row bottomMargin25">
-    <div class="demographic col-md-6"><%= questions[i].questionText %></div>
+    <div class="demographic col-md-6"><%= getLocaleResource(locales, questions[i].questionText) %></div>
   </div>
 
   <% if (questions[i].type == "input-only") { %>
@@ -21,7 +21,7 @@
                    name=<%= questions[i].responseOptions[j].name %> id=<%= questions[i].responseOptions[j].id %>
                    value= <%= questions[i].responseOptions[j].value %> />
             <label for=<%= questions[i].responseOptions[j].id %> class="padding-right-1"
-                   class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
+                   class="padding-right-1"><%= getLocaleResource(locales, questions[i].responseOptions[j].displayText) %></label>
           </div>
         </div>
       </radiogroup>
@@ -37,7 +37,7 @@
           name=<%= questions[i].responseOptions[j].name %> id=<%= questions[i].responseOptions[j].id %>
                  value= <%= questions[i].responseOptions[j].value %> />
           <label for=<%= questions[i].responseOptions[j].id %> class="padding-right-1"
-                 class="padding-right-1"><%= questions[i].responseOptions[j].displayText %></label>
+                 class="padding-right-1"><%= getLocaleResource(locales, questions[i].responseOptions[j].displayText) %></label>
         </div>
       </div>
     </radiogroup>
